# OpenCL_Testes

./: .gitignore  CMakeLists.txt  Makefile  README.md
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: Principal.cpp
